media/mojo/services/service_factory_impl.h
@@ -44,17 +44,25 @@ class ServiceFactoryImpl : public mojom::ServiceFactory {
   void CreateCdm(mojom::ContentDecryptionModuleRequest request) final;
 
  private:
+#if defined(ENABLE_MOJO_RENDERER)
+  RendererFactory* GetRendererFactory();
+#endif  // defined(ENABLE_MOJO_RENDERER)
+
 #if defined(ENABLE_MOJO_CDM)
   CdmFactory* GetCdmFactory();
-
-  std::unique_ptr<CdmFactory> cdm_factory_;
 #endif  // defined(ENABLE_MOJO_CDM)
 
   MojoCdmServiceContext cdm_service_context_;
   mojo::StrongBinding<mojom::ServiceFactory> binding_;
+
+#if defined(ENABLE_MOJO_RENDERER)
+  std::unique_ptr<RendererFactory> renderer_factory_;
+#endif  // defined(ENABLE_MOJO_RENDERER)
+
 #if defined(ENABLE_MOJO_CDM)
+  std::unique_ptr<CdmFactory> cdm_factory_;
   shell::mojom::InterfaceProviderPtr interfaces_;
-#endif
+#endif  // defined(ENABLE_MOJO_CDM)
 
   scoped_refptr<MediaLog> media_log_;
   std::unique_ptr<shell::ServiceContextRef> connection_ref_;
