media/mojo/services/test_mojo_media_client.h
@@ -32,23 +32,17 @@ class TestMojoMediaClient : public MojoMediaClient {
   // MojoMediaClient implementation.
   void Initialize() final;
   void WillQuit() final;
-  std::unique_ptr<Renderer> CreateRenderer(
-      scoped_refptr<base::SingleThreadTaskRunner> media_task_runner,
-      scoped_refptr<MediaLog> media_log,
+  scoped_refptr<AudioRendererSink> CreateAudioRendererSink(
       const std::string& audio_device_id) final;
+  std::unique_ptr<VideoRendererSink> CreateVideoRendererSink(
+      const scoped_refptr<base::SingleThreadTaskRunner>& task_runner) final;
+  std::unique_ptr<RendererFactory> CreateRendererFactory(
+      const scoped_refptr<MediaLog>& media_log) final;
   std::unique_ptr<CdmFactory> CreateCdmFactory(
       shell::mojom::InterfaceProvider* /* interface_provider */) final;
 
  private:
-  RendererFactory* GetRendererFactory(scoped_refptr<MediaLog> media_log);
-  AudioRendererSink* GetAudioRendererSink();
-  VideoRendererSink* GetVideoRendererSink(
-      const scoped_refptr<base::SingleThreadTaskRunner>& task_runner);
-
   ScopedAudioManagerPtr audio_manager_;
-  std::unique_ptr<RendererFactory> renderer_factory_;
-  scoped_refptr<AudioRendererSink> audio_renderer_sink_;
-  std::unique_ptr<VideoRendererSink> video_renderer_sink_;
 
   DISALLOW_COPY_AND_ASSIGN(TestMojoMediaClient);
 };
